force-app/main/default/objects/Match__c/Match__c.object-meta.xml
<CustomObject>
    <label>Match</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Match Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>