force-app/main/default/objects/Match__c/fields/GameActivity__c.field-meta.xml
<CustomField>
    <fullName>GameActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GameActivity</label>
    <referenceTo>GameActivity__c</referenceTo>
    <relationshipLabel>Matchs</relationshipLabel>
    <relationshipName>Matchs2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>