force-app/main/default/objects/Match__c/fields/Match_Name__c.field-meta.xml
<CustomField>
    <fullName>Match_Name__c</fullName>
    <formula>Participant_Home__r.Name  &amp;  &quot; - &quot; &amp; Participant_Visitor__r.Name &amp; &quot; : &quot; &amp;  
TEXT(YEAR( Date__c)) &amp; &quot;/&quot; &amp; TEXT(MONTH(Date__c)) &amp; &quot;/&quot; &amp; TEXT(DAY(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match Name</label>
    <type>Text</type>
</CustomField>