force-app/main/default/objects/Match__c/fields/MatchAndQuestion__c.field-meta.xml
<CustomField>
    <fullName>MatchAndQuestion__c</fullName>
    <formula>Participant_Home__r.Name  &amp;  &quot; - &quot; &amp; Participant_Visitor__r.Name &amp; &quot; : &quot; &amp; question__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MatchAndQuestion</label>
    <type>Text</type>
</CustomField>