force-app/main/default/objects/Match__c/fields/Participant_Home__c.field-meta.xml
<CustomField>
    <fullName>Participant_Home__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant Home</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Matchs</relationshipLabel>
    <relationshipName>Matchs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>