force-app/main/default/objects/Match__c/fields/Participant_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Participant_Visitor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant Visitor</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Matchs (Participant Visitor)</relationshipLabel>
    <relationshipName>Matchs1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>