force-app/main/default/objects/Match__c/fields/question__c.field-meta.xml
<CustomField>
    <fullName>question__c</fullName>
    <defaultValue>&quot;Who will win?&quot;</defaultValue>
    <label>question</label>
    <type>TextArea</type>
</CustomField>