force-app/main/default/objects/Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>GameActivity__c</columns>
    <columns>question__c</columns>
    <columns>Participant_Home__c</columns>
    <columns>Participant_Visitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>